src/test/deca/syntax/invalid/int_too_large.deca
// Description:
//    Programme testant la déclaration d'un int non codable sur 32 bits.
//
// Resultats:
//    a==2
//
// Historique:
//    cree le 19/12/2024

{
    int a = 2147483648;
}
